# rust_castle

./: .gitignore  Cargo.toml  README.md
data/: castle.ran  dynrooms.json  enemies.json  items.json
src/: ai.rs  combat.rs  enemies.rs  game.rs  hud.rs  input.rs  inventory.rs  items.rs  main.rs  render.rs  room.rs  textinput.rs
src/components/: common.rs  game.rs  mod.rs
src/room/: dynamic_rooms.rs  mod.rs
