[package]
name = "rust_castle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
regex = "1.5"
bitflags = "1.3.2"
serde = {version = "^1.0.44", features = ["derive"]}
serde_json = {version = "^1.0.44"}
itertools = "0.10.1"
